Fix unit test error
